--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,23 @@
-h1 {
-  color: blue; }
+body {
+  font-size: 16px;
+  height: 90vh;
+  padding: 0;
+  margin: 0; }
+
+main {
+  display: flex;
+  height: 90%;
+  justify-content: space-between; }
+  main .map-inputs-wrapper {
+    display: flex;
+    width: 50%;
+    flex-direction: column; }
+    main .map-inputs-wrapper input {
+      width: 40%;
+      height: 30px;
+      margin-bottom: 1em; }
+  main .map-wrapper {
+    width: 50%;
+    height: 100%; }
+    main .map-wrapper #map {
+      height: 100%; }
