--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,33 @@
-h1 {
-  color: blue;
+body {
+  font-size: 16px;
+  height: 90vh;
+  padding: 0;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  height: 90%;
+  justify-content: space-between;
+
+  .map-inputs-wrapper {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+
+    input {
+      width: 40%;
+      height: 30px;
+      margin-bottom: 1em;
+    }
+  }
+
+  .map-wrapper {
+    width: 50%;
+    height: 100%;
+
+    #map {
+      height: 100%;
+    }
+  }
 }
