--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -1,6 +1,12 @@
 h1 {
-  margin-bottom: 1.5em;
+  font-size: 3em;
   text-align: center;
+}
+
+h3 {
+  font-size: 1.2em;
+  text-align: center;
+  margin-bottom: 3.5em;
 }
 
 main {
@@ -13,35 +19,93 @@ main {
     width: 38%;
     flex-direction: column;
 
+    h2 {
+      font-size: 1.7em;
+      margin-bottom: .3em;
+
+      + span {
+        font-size: .95em;
+
+        span {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    .upper-button-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin: 1.7em 0;
+
+      #add-coords,
+      #remove-coords {
+        font-size: 1.05em;
+        position: relative;
+        right: .7em;
+        background-color: transparent;
+        border: 1px solid transparent;
+        color: $color-blue-dark;
+        padding: .5em;
+        text-align: left;
+
+        &:hover {
+          color: $color-blue-medium;
+        }
+      }
+
+      #add-coords {
+        width: 195px;
+
+        span {
+          font-size: 1.3em;
+        }
+      }
+
+      #remove-coords {
+        width: 221px;
+
+        span {
+          font-size: .65em;
+        }
+      }
+    }
+
+
     .coordinate-input-wrapper {
       display: flex;
-      margin-bottom: 1em;
+      margin-bottom: 1.5em;
       align-items: center;
       justify-content: space-between;
 
       span {
-        font-size: 1.4em;
+        font-size: 1.1em;
+        color: $color-black-50;
+        margin-right: 1em;
       }
 
       input {
-        font-size: 1em;
+        font-size: 1.2em;
         width: 45%;
         height: 30px;
-        padding: .3em;
+        padding: .4em;
+        border: 1px solid transparent;
+        border-bottom: 1px solid $color-black;
+        outline: 1px solid transparent;
       }
     }
 
-    button {
-      width: 40%;
-      margin-top: 1em;
-      cursor: pointer;
+    .lower-button-wrapper {
+      font-size: 1.05em;
+      margin: 2.5em 0 1.7em;
+      display: flex;
+      justify-content: space-between;
     }
-
   }
 
   .map-wrapper {
     width: 58%;
     height: 100%;
+    box-shadow: 0 0 2px $color-black-50;
 
     #map {
       height: 100%;
