--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -15,9 +15,9 @@ main {
   justify-content: space-between;
 
   .map-inputs-wrapper {
-    display: flex;
+    padding-right: .7em;
     width: 38%;
-    flex-direction: column;
+    overflow-y: auto;
 
     h2 {
       font-size: 1.7em;
@@ -33,8 +33,8 @@ main {
       justify-content: space-between;
       margin: 1.7em 0;
 
-      #add-coords,
-      #remove-coords {
+      #add-coord,
+      #remove-coord {
         font-size: 1.05em;
         position: relative;
         right: .7em;
@@ -49,8 +49,8 @@ main {
         }
       }
 
-      #add-coords {
-        width: 195px;
+      #add-coord {
+        width: 185px;
 
         span {
           font-size: 1.3em;
@@ -73,7 +73,7 @@ main {
       align-items: center;
       justify-content: space-between;
 
-      span {
+      span:first-of-type {
         font-size: 1.1em;
         color: $color-black-50;
         margin-right: 1em;
