--- a/sass/partials/_setup.scss
+++ b/sass/partials/_setup.scss
@@ -9,12 +9,13 @@ button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}
 
 html {
 	font-size: 16px;
+	height: 100%;
 }
 
 body {
   font-size: 16px;
   color: $color-black;
-  height: 90vh;
+  height: 93%;
   font-family: 'Cutive Mono', monospace;
   max-width: 1280px;
   margin: 0 auto;
