--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -5,3 +5,4 @@ $color-blue-dark: darken(#C4D9D3, 36%);
 $color-blue-medium: darken(#C4D9D3, 20%);
 $color-blue-light: darken(#C4D9D3, 13%);
 $color-white: #FFF;
+$color-grey: #dadada;
