--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -5,5 +5,5 @@ $color-blue-dark: darken(#C4D9D3, 36%);
 $color-blue-medium: darken(#C4D9D3, 20%);
 $color-blue-light: darken(#C4D9D3, 13%);
 $color-white: #FFF;
-$color-grey: #DADADA;
+$color-grey: #E8E8E8;
 $color-red: #D82F2F
