--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,6 @@ button, input, select, textarea {
   margin: 0; }
 
 * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -24,6 +22,10 @@ body {
   margin: 0 auto;
   padding: 3em 3%; }
 
+::-moz-selection {
+  background: #9cbfb5;
+  /* WebKit/Blink Browsers */ }
+
 ::selection {
   background: #9cbfb5;
   /* WebKit/Blink Browsers */ }
@@ -39,12 +41,15 @@ button {
   border: 1px solid transparent;
   cursor: pointer;
   outline: 1px solid transparent;
-  user-select: none; }
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
   button:hover {
     background-color: #9cbfb5; }
   button.inactive {
     pointer-events: none;
-    background-color: #DADADA; }
+    background-color: #E8E8E8; }
 
 h1 {
   font-size: 3em;
@@ -60,33 +65,34 @@ h1 {
 h3 {
   font-size: 1.2em;
   text-align: center;
-  margin-bottom: 3.5em; }
+  margin-bottom: .4em; }
   h3 + span {
-    font-size: .82em;
-    display: none; }
+    font-size: .85em;
+    display: block;
+    margin-bottom: 4em;
+    text-align: center; }
     h3 + span a {
       color: #5a8c7d; }
       h3 + span a:hover {
         color: #86b1a5; }
-  @media all and (max-width: 1130px) {
-    h3 {
-      margin-bottom: .5em; }
-      h3 + span {
-        display: block;
-        margin-bottom: 3.5em;
-        text-align: center; } }
   @media all and (max-width: 715px) {
     h3 {
-      font-size: 1.05em; } }
+      font-size: 1.05em; }
+      h3 + span {
+        font-size: .8em; } }
   @media all and (max-width: 550px) {
     h3 {
       font-size: .95em;
-      margin-bottom: 1.2em; } }
+      margin-bottom: 1em; } }
 
 main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 90%;
-  justify-content: space-between; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
   main .map-inputs-wrapper {
     padding-right: .7em;
     width: 38%;
@@ -97,8 +103,12 @@ main {
       main .map-inputs-wrapper h2 + span {
         font-size: .95em; }
     main .map-inputs-wrapper .upper-button-wrapper {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
       margin: 1.7em 0;
       position: relative; }
       main .map-inputs-wrapper .upper-button-wrapper.error {
@@ -111,7 +121,8 @@ main {
           position: absolute;
           bottom: -34px;
           right: 50%;
-          transform: translateX(50%);
+          -webkit-transform: translateX(50%);
+                  transform: translateX(50%);
           width: 97%;
           text-align: center;
           color: #D82F2F;
@@ -137,10 +148,16 @@ main {
         main .map-inputs-wrapper .upper-button-wrapper #remove-coord span {
           font-size: .7em; }
     main .map-inputs-wrapper .coordinate-input-wrapper {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       margin-bottom: 1.5em;
-      align-items: center;
-      justify-content: space-between; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
       main .map-inputs-wrapper .coordinate-input-wrapper span:first-of-type {
         font-size: 1.1em;
         color: rgba(34, 34, 34, 0.5);
@@ -156,8 +173,18 @@ main {
     main .map-inputs-wrapper .lower-button-wrapper {
       font-size: 1.05em;
       margin: 2.5em 0 1.7em;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-between; }
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      main .map-inputs-wrapper .lower-button-wrapper + span {
+        font-size: 1.03em;
+        color: #5a8c7d;
+        display: none; }
+        main .map-inputs-wrapper .lower-button-wrapper + span.active {
+          display: block; }
   main .map-wrapper {
     width: 58%;
     height: 100%;
@@ -191,19 +218,13 @@ main {
           text-align: center;
           display: block; }
       main .map-inputs-wrapper .upper-button-wrapper {
-        flex-direction: column;
-        align-items: center; }
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center; }
         main .map-inputs-wrapper .upper-button-wrapper #add-coord,
         main .map-inputs-wrapper .upper-button-wrapper #remove-coord {
           right: 0; } }
-
-footer {
-  font-size: .95em;
-  padding: 1.5em 0 .5em; }
-  footer a {
-    color: #5a8c7d; }
-    footer a:hover {
-      color: #86b1a5; }
-  @media all and (max-width: 1130px) {
-    footer {
-      display: none; } }
