--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -116,6 +116,7 @@ main {
 
       #remove-coord {
         width: 221px;
+        padding-left: 21px;
 
         span {
           font-size: .7em;
@@ -148,14 +149,19 @@ main {
 
     .lower-button-wrapper {
       font-size: 1.05em;
-      margin: 2.5em 0 1.7em;
+      margin: 2.5em 0 4em;
       display: flex;
       justify-content: space-between;
+      position: relative;
 
-      + span {
-        font-size: 1.03em;
+      span {
+        font-size: .98em;
+        position: absolute;
+        bottom: -52px;
+        width: 100%;
         color: $color-blue-dark;
         display: none;
+        text-align: center;
 
         &.active {
           display: block;
@@ -222,6 +228,20 @@ main {
         #add-coord,
         #remove-coord {
           right: 0;
+        }
+
+        #remove-coord {
+          padding-left: 1em;
+        }
+      }
+
+      .coordinate-input-wrapper {
+        span:first-of-type {
+          font-size: .9em;
+        }
+
+        input {
+          font-size: .95em;
         }
       }
     }
