--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -3,7 +3,7 @@ $color-black: #222;
 $color-black-50: transparentize(#222, .5);
 $color-blue-dark: darken(#C4D9D3, 36%);
 $color-blue-medium: darken(#C4D9D3, 20%);
-$color-blue-light: darken(#C4D9D3, 13%);
+$color-blue-light: darken(#C4D9D3, 16%);
 $color-white: #FFF;
-$color-grey: #E8E8E8;
+$color-grey: #EFEFEF;
 $color-red: #D82F2F
