--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ button, input, select, textarea {
   margin: 0; }
 
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -169,7 +170,7 @@ main {
         margin-right: 1em; }
       main .map-inputs-wrapper .coordinate-input-wrapper input {
         font-size: 1.2em;
-        width: 45%;
+        width: 100%;
         height: 30px;
         padding: .4em;
         border: 1px solid transparent;
@@ -201,7 +202,8 @@ main {
   main .map-wrapper {
     width: 58%;
     height: 100%;
-    box-shadow: 0 0 2px rgba(34, 34, 34, 0.5);
+    -webkit-box-shadow: 0 0 2px rgba(34, 34, 34, 0.5);
+            box-shadow: 0 0 2px rgba(34, 34, 34, 0.5);
     margin-bottom: 3em; }
     main .map-wrapper #map {
       height: 100%; }
